--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Pacman Game</title>
 </head>
 
-<body>
-    <canvas id="canvas"></canvas>
+<body style="margin: 0; background-color: black">
+    <canvas id="canvas" width="500" height="500"></canvas>
     <div style="display: none;">
         <img id="animations" src="./img/animations.gif" alt="">
         <img id="ghosts" src="./img/ghost.png" alt="">
